--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Gallery | EliteLogos</title>
+<title>Gallery | LogoBucket</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
 body {
@@ -128,7 +128,7 @@ function loadLogosFromFirebase(selectedCategory) {
                     <div class="p-4 flex-grow flex flex-col">
                         <h3 class="text-xl font-bold mb-2">${title}</h3>
                         <p class="text-gray-300 mb-2">${category}</p>
-                        <p class="text-lg font-semibold text-yellow-400 mb-4">${price}</p>
+                        <p class="text-lg font-semibold text-yellow-400 mb-4">Price: ${price}/-</p>
                         <div class="mt-auto">
                             <button class="shop-now-btn w-full bg-yellow-400 text-black font-bold py-2 px-4 rounded hover:bg-yellow-500 transition-colors"
                                     data-title="${title}"
