--- a/admin.html
+++ b/admin.html
@@ -22,7 +22,8 @@ body {
     transform: scale(1.05);
 }
 input, select {
-    color: #1a202c !important; /* Dark gray text for inputs */
+    color: white;
+    /* color: #1a202c !important; /* Dark gray text for inputs */
 }
 </style>
 </head>
@@ -75,7 +76,7 @@ input, select {
             <option value="PNG">PNG</option>
         </select>
         
-        <label class="block mb-2" for="logoPrice">Price (e.g., $49 or ₹2999)</label>
+        <label class="block mb-2" for="logoPrice">Price</label>
         <input type="text" id="logoPrice" required class="w-full p-2 mb-4 rounded" />
 
         <button type="submit" class="w-full bg-yellow-400 text-black font-bold text-lg px-4 py-3 rounded hover:bg-yellow-500 transition-colors">
