--- a/admin.html
+++ b/admin.html
@@ -22,8 +22,10 @@ body {
     transform: scale(1.05);
 }
 input, select {
+     color: #1a202c !important; /* Dark gray text for inputs */
+}
+#logoImage{
     color: white;
-    /* color: #1a202c !important; /* Dark gray text for inputs */
 }
 </style>
 </head>
