--- a/admin.html
+++ b/admin.html
@@ -67,7 +67,7 @@ input, select {
         <input type="text" id="logoTitle" required class="w-full p-2 mb-4 rounded" />
 
         <label class="block mb-2" for="logoImage">Logo Image</label>
-        <input type="file" id="logoImage" accept="image/*" required class="w-full p-2 mb-4 rounded" text-white />
+        <input type="file" id="logoImage" accept="image/*" required class="w-full p-2 mb-4 rounded text-white file:text-black"  />
         
         <label class="block mb-2" for="logoCategory">Category</label>
         <select id="logoCategory" required class="w-full p-2 mb-4 rounded">
