--- a/admin.html
+++ b/admin.html
@@ -21,11 +21,12 @@ body {
 .delete-btn:hover {
     transform: scale(1.05);
 }
-input, select {
-     color: #1a202c !important; /* Dark gray text for inputs */
-}
-#logoImage{
-    color: white;
+input[type="text"],
+input[type="email"],
+input[type="password"],
+textarea,
+select {
+    color: #000 !important;
 }
 </style>
 </head>
@@ -67,7 +68,7 @@ input, select {
         <input type="text" id="logoTitle" required class="w-full p-2 mb-4 rounded" />
 
         <label class="block mb-2" for="logoImage">Logo Image</label>
-        <input type="file" id="logoImage" accept="image/*" required class="w-full p-2 mb-4 rounded text-white file:text-black"  />
+        <input type="file" id="logoImage" accept="image/*" required class="w-full p-2 mb-4 rounded"  />
         
         <label class="block mb-2" for="logoCategory">Category</label>
         <select id="logoCategory" required class="w-full p-2 mb-4 rounded">
