--- a/admin.html
+++ b/admin.html
@@ -67,6 +67,9 @@ select {
         <label class="block mb-2" for="logoTitle">Logo Title</label>
         <input type="text" id="logoTitle" required class="w-full p-2 mb-4 rounded" />
 
+        <label class="block mb-2" for="logoCode">Logo Code (e.g., EL-001)</label>
+        <input type="text" id="logoCode" required class="w-full p-2 mb-4 rounded" />
+
         <label class="block mb-2" for="logoImage">Logo Image</label>
         <input type="file" id="logoImage" accept="image/*" required class="w-full p-2 mb-4 rounded"  />
         
@@ -200,8 +203,9 @@ select {
         const imageFile = document.getElementById("logoImage").files[0];
         const category = document.getElementById("logoCategory").value;
         const price = document.getElementById("logoPrice").value.trim();
+        const logoCode = document.getElementById("logoCode").value.trim();
 
-        if (!title || !imageFile || !category || !price) {
+        if (!title || !logoCode || !imageFile || !category || !price) {
             alert("Please fill all fields, including price.");
             return;
         }
@@ -222,6 +226,7 @@ select {
 
             await logosRef.push({
                 title: title,
+                logoCode: logoCode,
                 imageUrl: imageUrl, // The clean, original URL
                 category: category,
                 price: price
