--- a/gallery.html
+++ b/gallery.html
@@ -57,8 +57,8 @@ body {
     <!-- ========================================================= -->
 <!-- PASTE THIS ENTIRE MODAL BLOCK AFTER THE <nav> TAG -->
 <!-- ========================================================= -->
-<div id="logoModal" class="fixed inset-0 bg-black bg-opacity-90 z-50 hidden items-center justify-center p-4 overflow-y-auto">
-    <div id="modalContent" class="bg-gray-900 w-full max-w-4xl rounded-lg shadow-xl relative transform transition-all scale-95 opacity-0">
+<div id="logoModal" class="fixed inset-0 bg-black bg-opacity-90 z-50 hidden p-4 overflow-y-auto">
+    <div id="modalContent" class="bg-gray-900 w-full max-w-4xl rounded-lg shadow-xl relative transform transition-all scale-95 opacity-0 m-auto">
         <!-- Close Button -->
         <button id="closeModalBtn" class="absolute top-4 right-4 text-gray-400 hover:text-white text-3xl">×</button>
 
