--- a/gallery.html
+++ b/gallery.html
@@ -285,7 +285,7 @@ function renderGallery(logosToRender, selectedCategory) {
                 <div class="p-4 flex-grow flex flex-col">
                     <h3 class="text-xl font-bold mb-2">${title}</h3>
                     <p class="text-sm text-gray-400 mb-2">${category}</p>
-                    <p class="text-lg font-semibold text-yellow-400 mb-4">${price}</p>
+                    <p class="text-lg font-semibold text-yellow-400 mb-4">₹${price}/-</p>
                     <div class="mt-auto pt-2">
                         <div class="shop-now-trigger w-full bg-yellow-400 text-black text-center font-bold py-2 px-4 rounded hover:bg-yellow-500 transition-colors">
                             Shop Now
