--- a/gallery.html
+++ b/gallery.html
@@ -25,6 +25,8 @@ body {
     background-color: #2B6CB0; /* Active color */
 }
 </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4380722243005593"
+     crossorigin="anonymous"></script>
 </head>
 <body class="min-h-screen">
 <!-- Navbar -->
