--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,8 @@
             color: #1a202c !important; /* A dark gray color */
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4380722243005593"
+     crossorigin="anonymous"></script>
 </head>
 <body class="min-h-screen">
     
