--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
             overflow-x: hidden;
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4380722243005593"
+     crossorigin="anonymous"></script>
 </head>
 <body class="min-h-screen">
     
