--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <!-- Font Awesome for the menu icons -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4380722243005593"
      crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-4380722243005593">
 </head>
    
     <!-- =================================================== -->
