--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,7 @@ body {
 </style>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4380722243005593"
      crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-4380722243005593">
 </head>
 <body class="min-h-screen">
 <!-- Navbar -->
