--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Gallery | LogoBucket</title>
 <script src="https://cdn.tailwindcss.com"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4380722243005593"
+     crossorigin="anonymous"></script>
 <style>
 body {
     background-color: #000;
@@ -376,3 +378,4 @@ if (allButton) {
 </script>
 </body>
 </html>
+
