--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@ body {
 <nav class="bg-black bg-opacity-90 text-white py-4 px-6 fixed w-full z-40 shadow-lg">
     <div class="container mx-auto flex justify-between items-center">
         <a href="index.html" class="text-2xl font-bold">
-            <span class="text-white">Elite</span><span class="text-gray-300">Logos</span>
+            <span class="text-white">The</span><span class="text-gray-300">Logobucket</span>
         </a>
         <div class="hidden md:flex space-x-8">
             <a href="index.html" class="hover:text-gray-300 transition-colors">Home</a>
@@ -378,4 +378,5 @@ if (allButton) {
 </script>
 </body>
 </html>
+
 
