--- a/index.html
+++ b/index.html
@@ -190,7 +190,20 @@
             </div>
         </div>
     </section>
-    
+    <!-- ads for google -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4380722243005593"
+     crossorigin="anonymous"></script>
+<!-- Ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4380722243005593"
+     data-ad-slot="3435089148"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<!-- ads for google -->
     <!-- Gallery Preview Section -->
     <section id="gallery" class="py-20 bg-gray-900">
         <div class="container mx-auto px-6">
@@ -380,5 +393,6 @@
     }
 </script>
 </html>
+
 
 
